--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -319,8 +319,7 @@
 }
 
 .trust-logo img {
-    width: 30px;
-    filter: invert(1);
+    width: 120px;
 }
 
 /* RESPONSIVE */
